# V1stdp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  manifest.scm  stdp.cpp
.github/workflows/: test.yml
script/: all-feedforward-weight.gnuplot  all-spa-result.gnuplot  allImages.gnuplot  correlation-matrix-neuron.gnuplot  correlation-matrix-stimulation.gnuplot  correlation-without-pixels.gnuplot  correlation.gnuplot  each-cluster-images.gnuplot  each-cluster-neurons.gnuplot  each-feedforward-weight.gnuplot  inhibitory-magnification-neuron-0-1.gnuplot  inhibitory-magnification-neuron-0-20.gnuplot  inhibitory-magnification-stimulation-0-1.gnuplot  inhibitory-magnification-stimulation-0-20.gnuplot  line-chart-evaluation.gnuplot  line-chart.gnuplot  matrix-with-template.gnuplot  matrix-without-pixels.gnuplot  matrix.gnuplot  onOffImages.gnuplot  orientation-histogram.gnuplot  plot-image.gnuplot  receptive-field-distribution.gnuplot  response-list-double.gnuplot  response-list.gnuplot  response_correlation_triple.gnuplot  resps_test.gnuplot  showExploredImages.gnuplot
src/: CMakeLists.txt  config.hpp.in  stdp.cpp
src/config/: CMakeLists.txt  config.hpp.in
src/io/: CMakeLists.txt  io.cpp
src/io/include/: io.hpp
src/main/: CMakeLists.txt  stdp.cpp
src/main/simulation/: ALTDs.cpp  ALTDs.hpp  CMakeLists.txt  constant.hpp  delays.cpp  delays.hpp  model.hpp  noise.cpp  noise.hpp  phase.hpp  run.cpp  run.hpp  simulation.cpp  utils.cpp  utils.hpp
src/main/simulation/include/: ALTDs.hpp  delays.hpp  noise.hpp  run.hpp  simulation.hpp
src/main/tool/: CMakeLists.txt  tool.cpp
src/main/tool/analyze/: CMakeLists.txt  analyze.cpp
src/main/tool/analyze/applyPermutation/: CMakeLists.txt  applyPermutation.cpp  applyPermutation.hpp
src/main/tool/analyze/applyPermutation/include/: applyPermutation.hpp
src/main/tool/analyze/delay/: CMakeLists.txt  cut.cpp  cut.hpp  delay.cpp
src/main/tool/analyze/delay/include/: delay.hpp
src/main/tool/analyze/divideLine/: CMakeLists.txt  divideLine.cpp
src/main/tool/analyze/divideLine/include/: divideLine.hpp
src/main/tool/analyze/exploreMaximum/: CMakeLists.txt  evaluationFunction.hpp  exploreMaximum.cpp  smoothness.cpp  sparseness.cpp  standardDerivation.cpp
src/main/tool/analyze/exploreMaximum/include/: evaluationFunction.hpp  exploreMaximum.hpp  smoothness.hpp  sparseness.hpp  standardDerivation.hpp
src/main/tool/analyze/include/: analyze.hpp
src/main/tool/analyze/predict/: CMakeLists.txt  predict.cpp
src/main/tool/analyze/predict/include/: predict.hpp
src/main/tool/analyze/response/: CMakeLists.txt  clusterMap.cpp  clusterMap.hpp  clustering.cpp  clustering.hpp  correlationMatrix.cpp  correlationMatrix.hpp  cut.cpp  cut.hpp  response.cpp
src/main/tool/analyze/response/clusterAnalyze/: CMakeLists.txt  clusterAnalyze.cpp
src/main/tool/analyze/response/clusterAnalyze/include/: clusterAnalyze.hpp
src/main/tool/analyze/response/include/: response.hpp
src/main/tool/analyze/reverseCorrelation/: CMakeLists.txt  inputNoise.cpp  spikeTriggeredAverage.cpp
src/main/tool/analyze/reverseCorrelation/include/: reverseCorrelation.hpp
src/main/tool/analyze/splitAdd/: CMakeLists.txt  splitAdd.cpp
src/main/tool/analyze/splitAdd/include/: splitAdd.hpp
src/main/tool/analyze/substract/: CMakeLists.txt  substract.cpp
src/main/tool/analyze/substract/include/: substract.hpp
src/main/tool/analyze/transpose/: CMakeLists.txt  transpose.cpp
src/main/tool/analyze/transpose/include/: transpose.hpp
src/main/tool/analyze/weight/: CMakeLists.txt  cut.cpp  cut.hpp  weight.cpp
src/main/tool/analyze/weight/feedforward/: CMakeLists.txt  export.cpp  export.hpp  feedforward.cpp  orientation.cpp  orientation.hpp
src/main/tool/analyze/weight/feedforward/include/: feedforward.hpp
src/main/tool/analyze/weight/include/: weight.hpp
src/main/tool/filesystem/: CMakeLists.txt  filesystem.cpp
src/main/tool/filesystem/include/: filesystem.hpp
src/main/tool/image/: CMakeLists.txt  export.cpp  export.hpp  exporter.cpp  exporter.hpp  image.cpp
src/main/tool/image/include/: image.hpp
src/main/tool/include/: tool.hpp
src/main/tool/runner/: CMakeLists.txt  rsvg-convert.cpp  rsvg-convert.hpp  runner.cpp
src/main/tool/runner/include/: runner.hpp
src/simulation/: constant.hpp  phase.hpp  run.cpp  run.hpp  simulation.cpp  simulation.hpp  utils.hpp
src/statistics/: CMakeLists.txt  statistics.hpp
src/tool/: CMakeLists.txt  tool.cpp  tool.hpp
src/tool/analyze/: CMakeLists.txt  analyze.cpp  applyPermutation.cpp  applyPermutation.hpp  clustering.cpp  clustering.hpp  utils.cpp
src/tool/image/: CMakeLists.txt  export.cpp  exporter.cpp  exporter.hpp  image.cpp  image.hpp
src/transform/: CMakeLists.txt  transform.cpp
src/transform/include/: transform.hpp
test/: test.cmake
test/data/: cluster_map.txt  cluster_map_with_index_map.txt  cluster_map_with_minimum_size.txt  correlationMatrix_neuron.txt  correlationMatrix_neuron_permutated_both.txt  correlationMatrix_neuron_permutated_colomn.txt  lastnspikes_test.txt  response_excitatory.txt  response_inhibitory.txt  resps.txt  resps_test.txt  respssumv_mix.txt  sort_index_neuron_all.txt  sort_index_neuron_excitatory_only.txt  sort_index_neuron_inhibitory_only.txt  sort_index_stimulation_all.txt  sort_index_stimulation_excitatory_only.txt  sort_index_stimulation_inhibitory_only.txt  sorted_response_all.txt  sorted_response_excitatory_only.txt  sorted_response_inhibitory_only.txt  w.txt  w_500.txt  wff.txt  wff_500.txt
test/data/analyze/: cluster_map.txt  cluster_map_with_index_map.txt  cluster_map_with_minimum_size.txt  correlationMatrix_neuron_permutated_both.txt  response_excitatory.txt  (+6 more)
test/unit-test/: main.cpp
tool/: tool.hpp
tool/image/: image.hpp
workflows/: CMakeLists.txt  all-explore-maximum-with-noise.scm  all-explore-maximum.scm  all.scm  analyze-explore-maximum.scm  analyze.scm  exportImages.scm  learn.scm  responseDivide.scm  run-explore-maximum-with-noise.scm  run-explore-maximum.scm  simulation.scm  test.scm
(+388 files in other folders)
